Add vertical line on navbar

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,9 @@ a.active {
   display: flex;
   gap: 1rem;
 }
+
+.vertical-line {
+  width: 0.1rem;
+  height: 1rem;
+  background-color: #808080;
+}
